# truscan

./: .gitignore  MANIFEST.in  OWASP_METADATA.md  PROJECT_STRUCTURE.md  PYPI_RELEASE.md  QUICK_START_PYPI.md  README.md  debug_rule.yaml  pyproject.toml  requirements-ai.txt  requirements.txt  results_overreliance.json  setup.py  vscode-example-request.json  vscode-example-response.json  vscode-integration.md
.github/workflows/: README.md  build-vs-extension.yml  llm-scan-marketplace.yml  llm-scan-on-release.yml  llm-scan-reusable.yml  llm-scan.yml  publish-pypi.yml
action/: README.md  action.yml
backend/: .env.example  DOCKER.md  README.md  package-lock.json  package.json  setup.sh
backend/public/: app.js  index.html  scan-details.html  scan-details.js  styles.css
backend/src/: server.js
llm_scan/: __init__.py  config.py  models.py  runner.py
llm_scan/engine/: __init__.py  ai_engine.py  ai_providers.py  semgrep_engine.py
llm_scan/enrich/: __init__.py  rest_uploader.py  uploader.py
llm_scan/output/: __init__.py  console.py  json.py  sarif.py
llm_scan/utils/: __init__.py  code_context.py
samples/: README.md  llm02_insecure_output.py  llm04_model_dos.py  llm10_model_theft.py  vulnerable_api.py  vulnerable_app.py  vulnerable_script.py
samples/aws/: aws_code_injection.py  aws_command_injection.py  aws_prompt_injection.py  aws_sql_injection.py
samples/azure/: azure_code_injection.py  azure_command_injection.py  azure_prompt_injection.py  azure_sql_injection.py
samples/cohere/: cohere_code_injection.py  cohere_command_injection.py  cohere_prompt_injection.py  cohere_sql_injection.py
samples/hugging-face/: huggingface_code_injection.py  huggingface_command_injection.py  huggingface_model_dos.py  huggingface_overreliance.py  huggingface_path_traversal.py  huggingface_prompt_injection.py  huggingface_sensitive_info.py  huggingface_sql_injection.py  huggingface_supply_chain.py  huggingface_training_poisoning.py
samples/langchain/: langchain_agent_excessive_agency.py  langchain_agent_file_ops.py  langchain_agent_network.py  langchain_agent_tools.py  langchain_chain_injection.py  langchain_code_injection.py  langchain_palchain_injection.py  langchain_python_repl.py  langchain_template_injection.py
samples/llama-index/: llamaindex_code_injection.py  llamaindex_command_injection.py  llamaindex_document_loader.py  llamaindex_model_dos.py  llamaindex_path_traversal.py  llamaindex_prompt_injection.py  llamaindex_sensitive_info.py  llamaindex_sql_injection.py  llamaindex_vector_store.py
samples/openai/: README.md  llm01_prompt_injection.py  llm03_training_data_poisoning.py  llm05_supply_chain.py  llm06_sensitive_info.py  llm07_insecure_plugin.py  llm08_excessive_agency.py  llm09_overreliance.py  vulnerable_chatbot.py  vulnerable_workflow.py
visual-studio-extension/: .gitignore  BUILD.md  INSTALLATION.md  LICENSE.txt  LLMSecurityScanner.csproj  LLMSecurityScanner.sln  LLMSecurityScannerPackage.cs  MARKETPLACE.md  MARKETPLACE_DESCRIPTION.md  QUICKSTART.md  README.md  TROUBLESHOOTING_INSTALL.md  source.extension.vsixmanifest
visual-studio-extension/Commands/: ScanWorkspaceCommand.cs
vscode-extension/: .vscodeignore  CHANGELOG.md  EXTENSION_OVERVIEW.md  INSTALLATION.md  MARKETPLACE_DESCRIPTION.md  MARKETPLACE_PUBLISHING.md  PREREQUISITES.md  QUICKSTART.md  QUICK_FIX.md  README.md  SCANNER_INSTALLATION.md  TROUBLESHOOTING.md  package-lock.json  package.json  publish.sh  setup.sh
(+97 files in other folders)
