[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-scan"
version = "1.0.0"
description = "A Python-based code scanning tool for AI/LLM-specific vulnerabilities"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Spydra", email = "support@spydra.com"},
]
keywords = ["security", "llm", "ai", "code-scanning", "semgrep", "vulnerability", "owasp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "semgrep>=1.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/your-org/code-scan2"
Documentation = "https://github.com/your-org/code-scan2#readme"
Repository = "https://github.com/your-org/code-scan2"
"Bug Reports" = "https://github.com/your-org/code-scan2/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
llm-scan = "llm_scan.runner:main"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
llm_scan = ["rules/**/*.yaml", "rules/**/*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
